@@ -1,3 +1,10 @@
+2011-07-14  Chong Yidong  <cyd@stupidchicken.com>
+
+	* tramp-cmds.el (tramp-append-tramp-buffers): Revert to using
+	switch-to-buffer.
+
+	* tramp-compat.el (tramp-compat-pop-to-buffer-same-window): Deleted.
+
 2011-07-08  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-sh.el (tramp-sh-handle-start-file-process): Use a
